# agent-skills

./: .continuerules  .gitignore  .ignore  .pre-commit-config.yaml  .skillsaw-baseline.json  .skillsaw.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml  renovate.json  skills.json
.claude/: settings.json
.claude/hooks/: check-skill-versions.sh
.continue/: config.json
.cursor/rules/: project.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  release.yaml  update-gogcli.yaml  validate-gogcli.yaml
docs/: developer-guide.md  gcp-project-setup.md  google-oauth-setup.md  installation.md  migration.md  skills-vs-mcp.md  user-guide.md
docs/config-samples/: README.md  cursor-global-rules.json.sample
docs/config-samples/.claude/: CLAUDE.md.sample
docs/config-samples/.continue/: config.json.sample
docs/config-samples/.gemini/: GEMINI.md.sample
docs/config-samples/.github/: copilot-instructions.md
scripts/: __init__.py  check_versions.sh  dev-link.sh  generate_registry.py  install.py  pre_commit_checks.sh  setup_auth.py  setup_helper.py  sync_tile_versions.sh  validate_skill.py
shared/: __init__.py  http.py  output.py
shared/auth/: __init__.py  keyring_store.py  oauth.py  token.py
skills/: CLAUDE.md
skills/code-review/: SKILL.md  tile.json
skills/confluence/: CREATING_CONTENT.md  SKILL.md  __init__.py  tile.json
skills/confluence/references/: creating-content.md  permissions.md
skills/confluence/scripts/: __init__.py  confluence.py
skills/gerrit/: SKILL.md  tile.json
skills/gerrit/references/: advanced-usage.md  common-workflows.md  permissions.md  (+1 more)
skills/github/: SKILL.md  tile.json
skills/gitlab/: SKILL.md  tile.json
skills/gmail/: SKILL.md  tile.json
skills/google/: SKILL.md  dependencies.json
skills/google-calendar/: SKILL.md  tile.json
skills/google-docs/: SKILL.md  tile.json
skills/google-drive/: SKILL.md  tile.json
skills/google-sheets/: SKILL.md  tile.json
skills/google-slides/: SKILL.md  tile.json
skills/jira/: SKILL.md  __init__.py  api.py  jira.py  tile.json
templates/api-skill/: README.md  SKILL.md  SKILL.md.template
templates/cli-skill/: README.md  SKILL.md.template
templates/workflow-skill/: README.md  SKILL.md.template
tests/: __init__.py  conftest.py  test_confluence.py  test_confluence_defaults.py  test_generate_registry.py  test_gerrit.py  test_github.py  test_gitlab.py  test_gmail.py  test_google.py  test_google_calendar.py  test_google_docs.py  test_google_drive.py  test_google_sheets.py  test_google_slides.py  test_install.py  test_jira.py  test_jira_api.py  test_jira_defaults.py  test_setup_helper.py  test_shared_auth.py  test_shared_http.py  test_shared_output.py  test_validate_skill.py
tile/: tile.json
tile/docs/: confluence.md  index.md  jira.md  setup-helper.md  validate-skill.md
(+86 files in other folders)
