[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skills"
version = "0.2.0"
description = "Portable skills for AI coding assistants"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No runtime dependencies - skills are self-contained
# Users install: pip install --user requests keyring pyyaml
dependencies = []

[project.optional-dependencies]
# Development dependencies only
dev = [
    "requests>=2.28.0",
    "keyring>=24.0.0",
    "pyyaml>=6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "responses>=0.23.0",
    "pre-commit>=3.0.0",
]
google = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/odyssey4me/agent-skills"
Repository = "https://github.com/odyssey4me/agent-skills"
Issues = "https://github.com/odyssey4me/agent-skills/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*", "scripts*"]
exclude = ["shared*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["skills", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["skills", "scripts"]
branch = true
omit = [
    "*/__init__.py",
    "*/test_*.py",
]

[tool.coverage.report]
# Target: 80% coverage per file
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    # Exclude CLI main functions
    "def main\\(",
    # Exclude import error handlers (can't test missing dependencies)
    "except ImportError:",
    "print.*Install with:",
]
